[tool.poetry]
name = "doctor-in-the-loop-lung-disease-detection"
version = "2.0.0"
description = "Doctor-in-the-Loop Learning Framework for Lung Disease Classification with Automated Retraining"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
keywords = ["medical-ai", "lung-disease", "deep-learning", "doctor-feedback", "continuous-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# Web Framework
flask = "^2.3.0"
werkzeug = "^2.3.0"

# Deep Learning Frameworks
torch = "^2.0.0"
torchvision = "^0.15.0"
tensorflow = "^2.12.0"

# Computer Vision
ultralytics = "^8.0.0"
opencv-python = "^4.7.0"
pillow = "^9.5.0"

# Medical Imaging
pydicom = "^2.3.0"

# Data Science
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.0"
scipy = "^1.10.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

# Excel Export
openpyxl = "^3.1.0"

# Utilities
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
flake8 = {version = "^6.0.0", python = ">=3.8.1"}
mypy = "^1.3.0"
ipython = "^8.14.0"

[tool.poetry.scripts]
# CLI commands
lung-app = "app_enhanced:main"
lung-retrain = "retrain_pipeline:main"
lung-optimize = "optimize_weights:main"
lung-db = "db_manager:main"
lung-config = "config:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | Models
  | static
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
